# rust-embedded-light-sensor-hal

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: main.rs
